force-app/main/default/objects/Jira_Config__c/Jira_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores JIRA Cloud API credentials. One default record at org level. Fields hold host, email, API token, and project key for outbound REST callouts.</description>
    <label>Jira Config</label>
</CustomObject>