force-app/main/default/objects/Jira_Config__c/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <description>JIRA Cloud API token (from id.atlassian.com -> Security -> API tokens). Treated as secret; setting is Protected.</description>
    <label>API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>