force-app/main/default/objects/Jira_Config__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Atlassian login email used for JIRA Basic Auth.</description>
    <label>Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>