force-app/main/default/objects/Jira_Config__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>JIRA Cloud host, e.g. yourname.atlassian.net (no protocol)</description>
    <label>Host</label>
    <length>120</length>
    <type>Text</type>
</CustomField>