force-app/main/default/objects/Jira_Config__c/fields/Project_Key__c.field-meta.xml
<CustomField>
    <fullName>Project_Key__c</fullName>
    <description>JIRA project key where tickets get created, e.g. TS, TECH, ABC.</description>
    <label>Project Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>